--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -4,8 +4,9 @@ on:
   repository_dispatch:
   release:
     types: published
-  schedule:
-    - cron: 02 5 * * *
+  # 定时触发
+  # schedule:
+    # - cron: 02 5 * * *
   watch:
     types: started
     
